--- a/assets/scss/dark/_app_dark.scss
+++ b/assets/scss/dark/_app_dark.scss
@@ -4,7 +4,7 @@
 @import "variables";
 
 // Import Bootstrap libraries
-@import "../libraries";
+@import "../bootstrap";
 
 // Import additional styles
 @import "~bootswatch/dist/darkly/bootswatch";
