--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,7 +10,8 @@ $light: #eef0f2;
 $dark: #3c4055;
 $body-bg: #efefef;
 
+$font-size-base: 0.95rem;
+$font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "微软雅黑", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
 $enable-responsive-font-sizes: true;
 $enable-gradients: true;
-
-$animationDuration: 0.2s;
