--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -8,7 +8,7 @@
 }
 
 // Import Open Sans font from Google Fonts
-@import "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&display=swap";
+@import url(https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&display=swap);
 
 // Import the vue2-animate library.
 $animationDuration: 0.2s;
